Added new background for the row.

--- a/css/styles.css
+++ b/css/styles.css
@@ -72,7 +72,7 @@ html, body {
 .rowwrapper {
     width: 62%;
     height: 1.6em;
-    background-color: #fffed9;
+    background-image: linear-gradient(to right, rgba(255,254,217,1), rgba(255,254,217,0.5));
     border-top-style: solid;
     border-top-width: 1px;
     border-top-color: #fadb82;
